Including new node and relationship wrappers for the queries performed to the processed entities during the analysis. The wrappers also can delete nodes and relationships (when new definitions are loaded in the cache) via queries to the DB during the analysis. Extending the insertion strategy to update retrieved nodes and relationships in the DB only when new information was included or updated.